<resources>
    <string name="app_name">WorkPortal</string>
    <!-- app数据根目录 -->
    <string name="dir">/Android/data/com.yuecheng.workportal</string>
    <!--拍照临时文件-->
    <string name="camera_temp">/cameratemp/</string>
    <!--Bitmap缓存路径-->
    <string name="bitmap_cache">/bitmapcache/</string>
    <!-- apk下载文件路径 -->
    <string name="apk_download">/apkdownload/</string>

    <!-- 版本更新和提示 -->
    <string name="update_new_hint">版本更新</string>
    <string name="version_new_hint">有新版本啦！更新内容如下：</string>
    <string name="check_new_hint">拍照或文字回答</string>
    <string name="no_update_hint">暂不更新</string>
    <string name="update_now_hint">更新</string>
    <string name="update_desc_hint">描述:</string>
    <string name="update_dialog_title">发现新版本v</string>

    <!--加载数据提示-->
    <string name="amicable_view_tryagain">轻触屏幕，重新加载试试</string>
    <string name="amicable_view_loading">正在加载&#8230;</string>
    <string name="service_error_text1">网络不稳定</string>
    <string name="maybe_reason">可能原因:</string>
    <string name="service_error_text2">尚未接入互联网</string>
    <string name="service_error_text3">安全软件禁止访问网络</string>
    <string name="service_error_text4">服务器发生未知异常</string>
    <string name="empty_list">这里啥也没有！</string>

    <!--最近会话-->
    <string name="picture">图片</string>
    <string name="voice">语音</string>
    <string name="video">视频</string>
    <string name="location">位置</string>
    <string name="file">文件</string>

    <string name="save">保存</string>
    <string name="invalid_username_or_password">用户名或密码错误</string>
    <string name="old_password_hint">请输入旧密码</string>
    <string name="new_password_hint">新密码长度6-10，必须包含字母</string>
    <string name="confirm_password_hint">确认新密码</string>

    <string name="prompt">提示</string>
    <string name="check_connection">网络又调皮了，检查一下吧~</string>
    <string name="server_net_error">请求失败,网络或服务器发生异常</string>
    <string name="server_error">服务器发生异常</string>
    <string name="check_sdcard">请检查内存卡！</string>
    <string name="settings">设置</string>
    <string name="msg_notice">消息通知</string>
    <string name="voice_prompt">声音提示</string>
    <string name="vibration_notice">震动提示</string>
    <string name="synergy_notice">协同通知</string>
    <string name="meeting_notice">会议通知</string>
    <string name="meeting_remind">会议提醒周期</string>
    <string name="opinion_feedback">意见反馈</string>
    <string name="close">关闭</string>
    <string name="exit">退出</string>
    <string name="lost_session">登录验证失效,请重新登录</string>
    <string name="offline_session">该账户在其他设备登录,请重新登录</string>
    <string name="delete">删除</string>
    <string name="relogin">重新登录</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="exit_app_message">确定要退出吗?</string>
    <string name="version_update">版本更新</string>
    <string name="version_update_hint">已是最新版本</string>
    <string name="no_message">关闭后将接收不到消息提醒</string>

    <string name="message">消息</string>
    <string name="assistant">我的工作助理</string>
    <string name="task">日程</string>
    <string name="address_books">通讯录</string>
    <string name="workbench">工作台</string>
    <string name="personal_information">个人信息</string>

    <!--我的-->
    <string name="my">我的</string>
    <string name="my_hr">HR自助</string>
    <string name="my_login_web">登录网页版</string>
    <string name="my_directions">使用说明</string>
    <string name="my_feedback">意见反馈</string>
    <string name="my_sign_in">考勤</string>
    <string name="my_work_attendance">考勤查询</string>
    <string name="my_work_attendance_statistical">考勤统计</string>
    <string name="abnormal_attendance">考勤异常</string>
    <string name="leave_out">请假/外出</string>
    <string name="late">迟到</string>
    <string name="leave_early">早退</string>
    <string name="absenteeism">旷工</string>
    <string name="ask_for_leave">请假</string>
    <string name="not_scope">您当前不在考勤打卡范围内</string>
    <string name="input_attendance_note">请输入备注说明</string>
    <string name="attendance_note">考勤说明</string>
    <string name="reposition">重新定位 </string>


    <string name="opinion">请输入您对于产品功能的建议，我们将不断优化您的使用体验</string>
    <string name="opinion_phone">请输入您的电话/邮箱，方便我们联系（选填）</string>
    <string name="submit">提交</string>
    <string name="hr_prompt">亲，在等等快开放了~</string>
    <string name="know">知道了</string>
    <string name="join_company_one">今天是您加入公司的第</string>
    <string name="join_company_two">天</string>
    <string name="rich_scan">扫一扫</string>
    <string name="verification">验证</string>
    <string name="enter_pin">请输入您的密码</string>


    <!--设置-->
    <string name="title_message">消息</string>
    <string name="title_work">日程</string>
    <string name="title_contacts">通讯录</string>
    <string name="title_mycenter">我的</string>
    <string name="title_android">语音</string>
    <string name="set_index">设置首页</string>
    <string name="set_language">语言设置</string>
    <string name="set_home_page">请选择首页</string>
    <string name="set_fangyan">方言</string>
    <string name="modify_password">修改密码</string>
    <string name="message_notification">消息提醒</string>
    <string name="mandarin">普通话</string>
    <string name="cantonese">粤语</string>
    <string name="lmz">四川话</string>
    <string name="multilingual">多语言</string>
    <string name="current_version">当前版本</string>
    <string name="complete">完成</string>

    <!--语音-->
    <string name="grammar_error">语义错误</string>
    <string name="date_format">yyyy年MM月dd日</string>
    <string name="day_format">%1$d天前</string>
    <string name="hour_format">%1$d小时前</string>
    <string name="min_format">%1$d分钟前</string>
    <string name="sec_format">%1$d秒前</string>
    <string name="proccessing">正在处理中...</string>
    <string name="voice_type">播报声音</string>
    <string name="voice_speed">语速</string>
    <string name="talk_first">使用小技巧（点击说话）：\n1.IT服务(it service)\n2.查新闻(search for news)\n3.我要请假(take leave)\n4.我的工资(my salary)\n5.查报销(check payment request)\n6.订会议室(book meeting room)\n7.取消会议室(cancel the meeting room)\n此外，还可以智能回答你提的问题，赶快来玩吧！</string>
    <string name="wrong_instruction">很抱歉，我不知道该怎么答复您</string>
    <string name="version_title">当前版本</string>
    <string name="navigation_drawer_open">open</string>
    <string name="navigation_drawer_close">close</string>
    <string name="click_talk">点击说话</string>
    <string name="default_voice_answer">"Sorry, I don't know what you say"</string>
    <string name="normal">按住 说话</string>
    <string name="normal_end">松开 结束</string>
    <string name="voice_rec">手指上滑，取消发送</string>
    <string name="voice_cancel">松开手指，取消发送</string>
    <string name="voice_short">录音时间太短</string>
    <string name="voice_failure">录音失败！</string>
    <string name="send_audio_fail">发送语音失败，文件长度为0或语音权限没有开启</string>
    <string name="to_view_more">查看更多》</string>
    <string name="to_say_so">小主 ，可以这样对我说: </string>
    <string name="more_title">您可以这样对我说</string>
    <string name="how_call"> 如何拨打电话</string>
    <string name="call_da">“打电话给张三”</string>
    <string name="call_gei">“给张三打电话”</string>
    <string name="call_hu">“呼叫张三”</string>
    <string name="how_dhys"> 如何订会议室</string>
    <string name="reservation_dhys">“订会议室”</string>
    <string name="reservation_yyhys">“预约会议室”</string>
    <string name="apply_hys">“申请会议室”</string>
    <string name="how_cxdb"> 如何查询我的待办</string>
    <string name="my_db">“我的待办”</string>
    <string name="query_db">“查待办”</string>
    <string name="how_fxt"> 如何发协同</string>
    <string name="want_leave">“我要请假”</string>
    <string name="apply_leave">“申请请假”</string>
    <string name="no_found">没有找到当前人员</string>

    //工作台
    <string name="dbgz">待办工作</string>
    <string name="fqbd">发起表单</string>
    <string name="xt">协同</string>
    <string name="fqxt">发起协同</string>
    <string name="xjhy">新建会议</string>
    <string name="cxhy">查询会议</string>
    <string name="sjap">时间安排</string>
    <string name="dhys">订会议室</string>
    <string name="qyyx">企业邮箱</string>
    <string name="itfw">IT服务</string>
    <string name="wdsc">我的收藏</string>
    <string name="qyzd">企业制度</string>
    <string name="wdzx">文档中心</string>
    <string name="xw">新闻</string>
    <string name="gg">公告</string>
    <string name="dc">调查</string>
    <string name="cylc">常用</string>
    <string name="gj">工具</string>
    <string name="qt">其他</string>

    <!--通讯录-->
    <string name="personnel">人员</string>
    <string name="organization">组织架构</string>
    <string name="work_number">工号</string>
    <string name="mobile_phone">手机</string>
    <string name="landline">座机</string>
    <string name="email">邮箱</string>
    <string name="jobs">岗位</string>
    <string name="deputy_post">副岗</string>
    <string name="immediate_superior">直属上级</string>
    <string name="subordinates">下属员工</string>
    <string name="select_group">选择组织</string>


    <string-array name="voice_type_params">
        <item>xiaoqi</item>
        <item>xiaomei</item>
        <item>xiaorong</item>
        <item>xiaoqian</item>
        <item>xiaokun</item>
        <item>xiaoqiang</item>
        <item>xiaolin</item>
        <item>xiaoxin</item>
    </string-array>
</resources>
