<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_message"
        android:icon="@mipmap/message"
        android:title="@string/title_message" />

    <item
        android:id="@+id/navigation_work"
        android:icon="@mipmap/task"
        android:title="@string/title_work" />
    <item
        android:id="@+id/navigation_android"
        android:title="" />
    <item
        android:id="@+id/navigation_contacts"
        android:icon="@mipmap/contacts"
        android:title="@string/title_contacts" />
    <item
        android:id="@+id/navigation_mycenter"
        android:icon="@mipmap/my"
        android:title="@string/title_mycenter" />

</menu>
