<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_write_corners"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_dialog_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:gravity="center"
        android:text="@string/prompt"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tv_dialog_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/hr_prompt"
        android:textSize="18sp" />
    <View style="@style/linehorizontal"
        android:background="@color/gray"
        android:layout_marginTop="10dp"/>
    <TextView
        android:id="@+id/tv_dialog_one"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:gravity="center"
        android:text="@string/know"
        android:textColor="@color/blue"
        android:textSize="18sp" />
</LinearLayout>
