<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".module.mycenter.view.ModifyPasswordActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_height"
        android:background="@color/primary_dark">
        <ImageView
            android:id="@+id/back_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:padding="10dp"
            android:src="@mipmap/back_btn" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/modify_password"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </RelativeLayout>

    <com.yuecheng.workportal.widget.XEditText
        android:id="@+id/current_password_et"
        android:layout_width="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:layout_height="40dp"
        android:padding="5dp"
        android:textColor="@color/primary_text"
        android:background="@drawable/bg_edittext"
        android:inputType="textPassword"
        android:textSize="16sp"
        android:hint="@string/old_password_hint" />

    <com.yuecheng.workportal.widget.XEditText
        android:id="@+id/new_password_et"
        android:layout_width="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:layout_height="40dp"
        android:padding="5dp"
        android:textColor="@color/primary_text"
        android:background="@drawable/bg_edittext"
        android:inputType="textPassword"
        android:maxLength="10"
        android:textSize="16sp"
        android:hint="@string/new_password_hint" />

    <com.yuecheng.workportal.widget.XEditText
        android:id="@+id/confirm_password_et"
        android:layout_width="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:layout_height="40dp"
        android:padding="5dp"
        android:textColor="@color/primary_text"
        android:background="@drawable/bg_edittext"
        android:inputType="textPassword"
        android:maxLength="10"
        android:textSize="16sp"
        android:hint="@string/confirm_password_hint" />
    <Button
        android:id="@+id/save_btn"
        style="@style/comm_btn_style"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/save"
        android:textColor="@color/white" />
</LinearLayout>