<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    tools:context=".module.mycenter.view.SettingsActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_height"
        android:background="@color/primary_dark">
        <ImageView
            android:id="@+id/back_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:padding="10dp"
            android:src="@mipmap/back_btn" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/settings"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/modify_password"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="@drawable/list_item_bg"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/modify_password"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@mipmap/right_in_btn"/>

    </RelativeLayout>

    <View style="@style/divider_horizontal"/>

    <RelativeLayout
        android:id="@+id/message_notification"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="@drawable/list_item_bg"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/message_notification"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@mipmap/right_in_btn"/>

    </RelativeLayout>

    <View style="@style/divider_horizontal"/>

    <RelativeLayout
        android:id="@+id/language_settings"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="@drawable/list_item_bg"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/set_language"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@mipmap/right_in_btn"/>

    </RelativeLayout>

    <View style="@style/divider_horizontal"/>

    <RelativeLayout
        android:id="@+id/fangyan_settings"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="@drawable/list_item_bg"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/set_fangyan"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@mipmap/right_in_btn"/>

    </RelativeLayout>

    <View style="@style/divider_horizontal"/>

    <RelativeLayout
        android:id="@+id/index_settings"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="@drawable/list_item_bg"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/set_index"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@mipmap/right_in_btn"/>

    </RelativeLayout>

    <View style="@style/divider_horizontal"/>


    <Button
        android:id="@+id/exit_btn"
        style="@style/comm_btn_style"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/exit"
        android:textColor="@color/white" />
</LinearLayout>